CSS changes for button overlap fix

--- a/static/css/bootstrap-extensions.css
+++ b/static/css/bootstrap-extensions.css
@@ -2,8 +2,8 @@
  * Extra large button extensions. Extends `.btn`.
  */
 .btn-xlarge {
-    padding: 16px 26px;
-    font-size: 18px;
+    padding: 16px 20px;
+    font-size: 14px;
     line-height: normal;
     -webkit-border-radius: 8px;
        -moz-border-radius: 8px;
